# daily-digest-prompt

./: .coveragerc  .editorconfig  .env.example  .gitignore  .gitmessage  20260215系統提升洞見計畫.md  AgentTeams-案例步驟.md  CHANGELOG.md  CLAUDE.md  ClaudeCodeTeamAgent.md  HEARTBEAT.md  Podcast_Research_Plan.md  README.md  SKILLS_INDEX.md  Shurangama_Research_Report.md  Todoist系統對齊優化計畫.md  Week1-2完成報告.md  Week2-Day1-2-完成報告.md  Week2-Day3-完成報告.md  Week2-Day4-完成報告.md  [TEST-DLQ] live test.md  agent_harness_research_plan.md  analyze-config.ps1  bash.exe.stackdump  cache-service.ps1  chatroom-scheduler.py  check-bot-health.ps1  check-health.ps1  check-token.ps1  circuit-breaker-utils.ps1  cleanup-tasks.ps1  comment1.json  comment2.json  create-audit-tasks.ps1  create-github-research-tasks.ps1  create-research-tasks.ps1  cron_5b6ee21f-49c.md  cron_6062dc8c-96b.md  cron_d3af14f8-dc7.md  current_memory_report.md  (+78 more)
.claude/: settings.json
.cursor/: cli.json
analysis/: cache-eviction-comparison.json  high-potential-topics.json  inefficient-skill-chains.json  research-topic-clusters.json  skill-candidates.json  skill-usage-baseline.json
bot/: .env.example  .gitignore  bot.js  clear-all-relay-nodes.js  clear-line-tasks-on-relay.js  final_test_output.txt  final_test_result.json  groq-relay.js  index.html  kb_import_payload.json  list-relay-nodes.js  package-lock.json  package.json  process_messages.ps1  relay-server.js  restart-bot.ps1  run_worker_schedule.py  startup.ps1  test-intents.js  test-line-task-types.mjs  test_e2e_full.mjs  test_final_with_ntfy.mjs  test_full_with_result.mjs  test_full_workflow.mjs  test_game_a427861c.md  test_kb_bc8311a8.md  test_listen_reply.mjs  test_result.txt  test_result2.txt  vitest.config.js  watchdog-chatroom.ps1  watchdog-groq-relay.ps1
config/: CLAUDE.md  README.md  agent-extra-reads.yaml  agent-pool.yaml  agent-roles.yaml  audit-scoring.yaml  autonomous-harness.yaml  benchmark.yaml  budget.yaml  cache-policy.yaml  codex-auto-task-result.schema.json  creative-game-mode.yaml  dedup-policy.yaml  dependencies.yaml  digest-format.md  doc-generation.yaml  error-patterns.yaml  evaluation-criteria.yaml  external-sla.yaml  failure-taxonomy.yaml  frequency-limits.yaml  health-scoring.yaml  hook-rules.yaml  insight-briefing-workflow.yaml  kb-content-scoring.yaml  llm-router.yaml  long_term_memory.yaml  media-pipeline.yaml  model-selection.yaml  notification-events.yaml  notification.yaml  ooda-workflow.yaml  otel-config.yaml  peak-hour-alerts.yaml  pipeline.yaml  podcast.yaml  recovery-tiers.yaml  retro-games.yaml  routing.yaml  scoring.yaml  (+5 more)
context/: 2026智慧城市展深度逛展說明.md  adr-018-closure-report.json  adr-registry.json  ai-research-plan.json  ai_architecture_governance_note.json  ai_sysdev_doc_pipeline_note.md  arch-decision-temp.json  arch-decision.json  arch-evolution-report.json  auto-tasks-today.json  behavior-patterns.json  chatroom-optimize-history.json  creative-breakout-research-2026-03-14.md  fahua-kb-import.json  fahua-research-20260316-synthesis.md  fahua-research-20260317-task.md  fahua-research-20260317.md  fahua-research-report-20260315.md  fahua-research-report.md  game-audit-tracker.json  gitnexus-report.md  hook-registry-audit.md  hook-registry-snapshot.json  improvement-backlog.json  jiaoguang-podcast-next.json  jiaoguangzong-note.md  jingtu-note.md  kb-research-brief.json  ltx2-video-generation-model-research.json  (+23 more)
(+1401 files in other folders)
