[project]
name = "daily-digest-prompt"
version = "0.1.0"
description = "Automated daily digest system with Claude Code"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "schedule>=1.2.0",
    "pyyaml>=6.0",
    "edge-tts>=6.1.0",
    "fpdf2>=2.8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
gmail = [
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.80.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=hooks --cov=skills --cov-report=term-missing --cov-fail-under=40"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
