[project]
name = "daily-digest-prompt"
version = "0.1.0"
description = "Automated daily digest system with Claude Code"
requires-python = ">=3.9"
# 核心依賴使用 == 鎖定（ADR-010：防止惡意版本注入；版本與 uv.lock 對齊）
# fpdf2 維持 >= 以相容 requires-python >=3.9（fpdf2 2.8.7 需 3.10+）
dependencies = [
    "requests==2.32.5",
    "schedule==1.2.2",
    "pyyaml==6.0.3",
    "edge-tts>=6.1.0,<7.0.0",
    "fpdf2>=2.8.4,<3.0.0",
    "opentelemetry-api>=1.22.0,<2.0.0",
    "opentelemetry-sdk>=1.22.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pip-audit>=2.0.0",
]
gmail = [
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.80.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# --cov-fail-under 從 addopts 移除：CI 分批執行三個子套件（hooks/skills/tools），
# 各批次只跑自己的測試，全域 fail-under 會因其他模組 0% 而誤判失敗。
# 各子套件的覆蓋率閾值在 ci.yml 各步驟中個別指定。
# 本地全跑時：uv run pytest --cov=hooks --cov=skills --cov-fail-under=44
addopts = "-v --tb=short"

[tool.coverage.run]
# coverage.py 量測範圍（全套件執行時使用）
source = ["hooks", "skills"]
omit = ["tests/*", "*/__pycache__/*", "*/scripts/__pycache__/*"]

[tool.coverage.report]
# 全套件執行時的最低門檻（uv run coverage report 或全跑 pytest 時生效）
fail_under = 44
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
